--- a/.github/workflows/buildPush2ToKdrl.yml
+++ b/.github/workflows/buildPush2ToKdrl.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Build Tag and push Docker Image
         env:
-          IMAGE_NAME: sanzhar93.jfrog.io/myrepo-docker/jfrog-docker-example-image:${{ github.run_number }}
+          IMAGE_NAME: kyndryl.jfrog.io/kyndryl-transformation-platform-dev-docker/jfrog-docker-example-image:${{ github.run_number }}
         run: |
           jf docker build -t $IMAGE_NAME .
           jf docker push $IMAGE_NAME
