--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -1,9 +1,9 @@
 name: Build and Tag Docker Image
 
-on:
-  push:
-    branches:
-      - main
+on: [workflow_dispatch]
+  # push:
+  #   branches:
+  #     - main
       
 jobs:
   build-and-tag:
