--- a/.github/workflows/buildPush2ToKdrl.yml
+++ b/.github/workflows/buildPush2ToKdrl.yml
@@ -18,9 +18,12 @@ jobs:
       - name: Build Tag and push Docker Image
         env:
           IMAGE_NAME: kyndryl.jfrog.io/kyndryl-transformation-platform-dev-docker-local/jfrog-docker-example-image:${{ github.run_number }}
+          IMAGE_NAME_LATEST: kyndryl.jfrog.io/kyndryl-transformation-platform-dev-docker-local/jfrog-docker-example-image:LATEST
         run: |
           jf docker build -t $IMAGE_NAME .
+          jf docker tag $IMAGE_NAME $IMAGE_NAME_LATEST
           jf docker push $IMAGE_NAME
+          jf docker push $IMAGE_NAME_LATEST
           
       # - name: Publish Build info With JFrog CLI
       #   env:
