--- a/.github/workflows/buildPush2ToKdrl.yml
+++ b/.github/workflows/buildPush2ToKdrl.yml
@@ -22,7 +22,7 @@ jobs:
         env:
           #IMAGE_NAME: kyndryl.jfrog.io/kyndryl-transformation-platform-dev-docker-local/jfrog-docker-example-image:${{ github.run_number }}
           IMAGE_NAME: kyndryl.jfrog.io/kyndryl-transformation-platform-dev-docker-local/jfrog-docker-example-image:${{ env.NOW }}
-          IMAGE_NAME_LATEST: kyndryl.jfrog.io/kyndryl-transformation-platform-dev-docker-local/jfrog-docker-example-image:LATEST
+          IMAGE_NAME_LATEST: kyndryl.jfrog.io/kyndryl-transformation-platform-dev-docker-local/jfrog-docker-example-image:latest
         run: |
           jf docker build -t $IMAGE_NAME .
           jf docker tag $IMAGE_NAME $IMAGE_NAME_LATEST
