--- a/.github/workflows/buildPush2ToKdrl.yml
+++ b/.github/workflows/buildPush2ToKdrl.yml
@@ -1,6 +1,10 @@
 name: Build and Tag Docker Image to Kdrl
 
-on: [workflow_dispatch]
+# on: [workflow_dispatch]
+on:
+  push:
+    branches:
+    - main
         
 jobs:
   build-and-tag:
