--- a/.github/workflows/buildPush2ToKdrl.yml
+++ b/.github/workflows/buildPush2ToKdrl.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Create .env.production file
         run: |
-         sed 's/host:port_numer/13.81.114.23:5003/' .env.production.example > .env.production
+         sed 's/host:port_number/13.81.114.23:5003/' .env.production.example > .env.production
          cat .env.production
 
       - name: Setup JFrog CLI
